# packet-inspector

./: Cargo.toml
src/: bytes_arch.rs  lib.rs  osi_layer.rs  packet.rs  sessions.rs  setup_logger.rs  signature.rs
src/osi_layer/: l2.rs  l3.rs  l4.rs
src/packet/: parser.rs
src/packet/parser/: layer.rs
src/packet/parser/l2/: ethernet.rs
src/packet/parser/l3/: icmp.rs  ipprot.rs  ipv4.rs  ipv6.rs
src/packet/parser/l4/: tcp.rs
src/sessions/: ipv4_frags.rs  tcp_sessions.rs
src/sessions/tcp_sessions/: tcp_session.rs
